--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "aos": "^2.3.4",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
-    "chart.js": "^4.4.6",
+    "chart.js": "^4.4.7",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "framer-motion": "^11.11.11",
+    "mongoose": "^8.8.4",
     "next": "14.2.5",
     "next-auth": "^4.24.10",
     "react": "^18",
